--- a/gtxt/platform/msvc2008/projects/test.vcproj
+++ b/gtxt/platform/msvc2008/projects/test.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\ejoy2d\src;..\..\..\..\ejoy2d\src\render;..\..\..\..\dtex\src;..\..\..\..\dtex\external\ejoy2d;..\..\..\..\drag2d\src\drag2d;..\..\..\..\particle\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;"
+				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\ejoy2d\src;..\..\..\..\ejoy2d\src\render;..\..\..\..\dtex\src;..\..\..\..\dtex\external\ejoy2d;..\..\..\..\drag2d\src\drag2d;..\..\..\..\particle\src;..\..\..\..\easyejoy2d\src;..\..\..\..\gtxt\src\gtxt;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;USED_IN_EDITOR"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -122,7 +122,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\ejoy2d\src;..\..\..\..\ejoy2d\src\render;..\..\..\..\dtex\src;..\..\..\..\dtex\external\ejoy2d;..\..\..\..\drag2d\src\drag2d;..\..\..\..\particle\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;"
+				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\ejoy2d\src;..\..\..\..\ejoy2d\src\render;..\..\..\..\dtex\src;..\..\..\..\dtex\external\ejoy2d;..\..\..\..\drag2d\src\drag2d;..\..\..\..\particle\src;..\..\..\..\easyejoy2d\src;..\..\..\..\gtxt\src\gtxt;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;USED_IN_EDITOR"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -182,6 +182,66 @@
 	<References>
 	</References>
 	<Files>
+		<Filter
+			Name="frame"
+			>
+			<File
+				RelativePath="..\..\..\src\test\main.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\test\main.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\test\Task.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\test\Task.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="view"
+			>
+			<File
+				RelativePath="..\..\..\src\test\LibraryPanel.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\test\LibraryPanel.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\test\StageCanvas.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\test\StageCanvas.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\test\StagePanel.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\test\StagePanel.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="test"
+			>
+			<File
+				RelativePath="..\..\..\src\test\TestNormal.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\test\TestNormal.h"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
