[ADDED] pack ui wrapper
Former-commit-id: 0df30217b65d7df78def71812f9ba8a7f4c22a33

--- a/easyrespacker/platform/msvc2008/projects/librespacker.vcproj
+++ b/easyrespacker/platform/msvc2008/projects/librespacker.vcproj
@@ -706,6 +706,14 @@
 						RelativePath="..\..\..\src\librespacker\PackUIWindowTask.h"
 						>
 					</File>
+					<File
+						RelativePath="..\..\..\src\librespacker\PackUIWrapperTask.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\librespacker\PackUIWrapperTask.h"
+						>
+					</File>
 				</Filter>
 			</Filter>
 		</Filter>
