[ADDED] 转换老的anchor格式
Former-commit-id: 2223c41f0a33eadc87c5f9f41b9ff6a8052f6d04

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -622,11 +622,27 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\easydb_cl\TransOldAnchorFile.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\TransOldAnchorFile.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\easydb_cl\TransOldShapeFile.cpp"
 					>
 				</File>
 				<File
 					RelativePath="..\..\..\src\easydb_cl\TransOldShapeFile.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\TransOldTextFile.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\TransOldTextFile.h"
 					>
 				</File>
 			</Filter>
