[ADDED] pack new anchor
Former-commit-id: c2650a07c281d632aecce4e724f65b2d7a04497d

--- a/easyrespacker/platform/msvc2008/projects/librespacker.vcproj
+++ b/easyrespacker/platform/msvc2008/projects/librespacker.vcproj
@@ -276,6 +276,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="4. anchor"
+				>
+				<File
+					RelativePath="..\..\..\src\librespacker\AnchorBuilder.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\librespacker\AnchorBuilder.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="nodes"
