[ADDED] trans new text
Former-commit-id: b64bd79b047e8b2e774354bb8c909ccbc2e4189a

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -622,6 +622,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\easydb_cl\TransNewTextFile.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\TransNewTextFile.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\easydb_cl\TransOldAnchorFile.cpp"
 					>
 				</File>
