[ADDED] ui type cfg
Former-commit-id: 3a5593a944f02d4f4b190e59bc884a1c05737b5e

--- a/easyui/platform/msvc2008/projects/easyui.vcproj
+++ b/easyui/platform/msvc2008/projects/easyui.vcproj
@@ -265,6 +265,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\easyui\SymbolCfg.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easyui\SymbolCfg.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\easyui\TidCfg.cpp"
 				>
 			</File>
@@ -932,6 +940,10 @@
 				RelativePath="..\..\..\src\easyui\EditClipboxOP.h"
 				>
 			</File>
+		</Filter>
+		<Filter
+			Name="config"
+			>
 		</Filter>
 		<File
 			RelativePath="..\..\..\..\editor-external\wx\include\wx\msw\wx.rc"
