[FIXED] anim切换模板状态
Former-commit-id: 633cb2acbcf4b4e74433060e4592f3c01de48d75

--- a/easyanim/platform/msvc2008/projects/easyanimation.vcproj
+++ b/easyanim/platform/msvc2008/projects/easyanimation.vcproj
@@ -605,6 +605,22 @@
 				</File>
 			</Filter>
 		</Filter>
+		<Filter
+			Name="message"
+			>
+			<File
+				RelativePath="..\..\..\src\easyanimation\message\InsertLayerSJ.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easyanimation\message\InsertLayerSJ.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easyanimation\message\message_id.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\easyanimation\frame\Widgets.h"
 			>
