[CHANGED] add and remove layer change to msg
Former-commit-id: 9f5e802f5fc03ad678fe4e94d99d737d0b42fa47

--- a/easyanim/platform/msvc2008/projects/easyanimation.vcproj
+++ b/easyanim/platform/msvc2008/projects/easyanimation.vcproj
@@ -620,6 +620,14 @@
 				RelativePath="..\..\..\src\easyanimation\message\message_id.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\easyanimation\message\RemoveLayerSJ.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easyanimation\message\RemoveLayerSJ.h"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath="..\..\..\src\easyanimation\frame\Widgets.h"
