[ADDED] use c2 in editor
Former-commit-id: 92a8dbbae948c157f4d1b903e0a299ed9bed4b13

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1229,6 +1229,14 @@
 				Name="dynamic_packer"
 				>
 				<File
+					RelativePath="..\..\..\src\drag2d\render\DrawCallBatching.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\DrawCallBatching.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\render\DynamicFont.cpp"
 					>
 				</File>
