--- a/dtex/platform/msvc2008/projects/dtex.vcproj
+++ b/dtex/platform/msvc2008/projects/dtex.vcproj
@@ -633,6 +633,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\dtex_shader_new.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_shader_new.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\dtex_target.c"
 				>
 			</File>
