[ADDED] draw call batching
Former-commit-id: 9193772f5e0a5e5e46041441af38b1f75de99a91

--- a/dtex/platform/msvc2008/projects/dtex.vcproj
+++ b/dtex/platform/msvc2008/projects/dtex.vcproj
@@ -661,7 +661,7 @@
 			Name="adapter"
 			>
 			<File
-				RelativePath="..\..\..\src\dtex_ej_glyph.cpp"
+				RelativePath="..\..\..\src\dtex_ej_glyph.c"
 				>
 			</File>
 			<File
