[ADDED] dtex cs
Former-commit-id: af67a47d874cdfd195f99238ec410fc34b61b830

--- a/dtex/platform/msvc2008/projects/dtex.vcproj
+++ b/dtex/platform/msvc2008/projects/dtex.vcproj
@@ -363,6 +363,14 @@
 					RelativePath="..\..\..\src\dtex_cg.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_cs.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_cs.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="extend"
